--- a/arxiv/2023_03_arxiv.html
+++ b/arxiv/2023_03_arxiv.html
@@ -66,6 +66,52 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.08689">https://arxiv.org/abs/2211.08689</a></span> Morse theory study on the evolution of nodal lines in PT -symmetric nodal-line semimetals (Shuichi Murakami)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.08048">https://arxiv.org/abs/2210.08048</a></span> Probing Fermi sea topology by Andreev state transport (Pok Man Tam, Charles L. Kane)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2204.11007">https://arxiv.org/abs/2204.11007</a></span> Synthetic U(1) Gauge Invariance in a Spin-1 Bose Gas</p>
+<br>
+<p class="p1">20230306</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.01533">https://arxiv.org/abs/2303.01533</a></span> Measurement-induced Floquet enriched topological order ***** (Jong Yeon Lee, Matthew P. A. Fisher)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.01935">https://arxiv.org/abs/2303.01935</a></span> RG Flows and Stability in Defect Field Theories</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.01817">https://arxiv.org/abs/2303.01817</a></span> An Introduction to Higher-Form Symmetries ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.01901">https://arxiv.org/abs/2303.01901</a></span> Unconventional fully-gapped superconductivity in the heavy-fermion metal CeCu2Si2 (Qimiao Si)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.01585">https://arxiv.org/abs/2303.01585</a></span> Quantum Electrodynamics in 2+1 Dimensions as the Organizing Principle of a Triangular Lattice Antiferromagnet</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.02130">https://arxiv.org/abs/2303.02130</a></span> Entanglement Entropy of Large-N Theories ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.02152">https://arxiv.org/abs/2303.02152</a></span> Theory of the low- and high-field superconducting phases of UTe2 **** (Yue Yu, Daniel F. Agterberg, S. Raghu)</p>
+<p class="p2"><br></p>
+<p class="p1">20230307</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.02179">https://arxiv.org/abs/2303.02179</a></span> Observation of higher-order topological states on a quantum computer</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.02433">https://arxiv.org/abs/2303.02433</a></span> Thermalization and transient dynamics in Multi-Channel Kondo systems under the quantum quench: Large-N Schwinger-Keldysh approach ***** (Iksu Jang, Po-Yao Chang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.02422">https://arxiv.org/abs/2303.02422</a></span> Attenuating Dynamics of Strongly Interacting Fermionic Superfluids in SYK Solvable Models ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.02963">https://arxiv.org/abs/2303.02963</a></span> Quantum time reflection and refraction of ultracold atoms ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.02171">https://arxiv.org/abs/2303.02171</a></span> Hidden Critical Points in the Two-Dimensional O(n &gt; 2) model: Exact Numerical Study of a Complex Conformal Field Theory ***** (Omid Tavakol, Han Ma, Thomas Scaffidi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.02187">https://arxiv.org/abs/2303.02187</a></span> Subsystem symmetry, spin glass order, and criticality from random measurements in a 2D Bacon-Shor circuit *** (Chao-Ming Jian)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.02492">https://arxiv.org/abs/2303.02492</a></span> Kondo effect in twisted bilayer graphene *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.02670">https://arxiv.org/abs/2303.02670</a></span> Topological Mixed Valence Model for Twisted Bilayer Graphene *** (Piers Coleman)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.03356">https://arxiv.org/abs/2303.03356</a></span> Dynamic Mass Generation and Topological Order in Overscreened Kondo Lattices *****</p>
+<p class="p2"><br></p>
+<p class="p1">20230308</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.03429">https://arxiv.org/abs/2303.03429</a></span> TBG as Topological Heavy Fermion: II. Analytical approximations of the model parameters ***** (Piers Coleman, B. Andrei Bernevig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.03421">https://arxiv.org/abs/2303.03421</a></span> The random coupling model of turbulence as a classical SYK model ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.03474">https://arxiv.org/abs/2303.03474</a></span> Large p SYK from chord diagrams ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.04004">https://arxiv.org/abs/2303.04004</a></span> Universal approach to p-wave triplet superconductivity in the Hubbard models ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.03491">https://arxiv.org/abs/2303.03491</a></span> A Landau Pole in Conformal Field Theory *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.03674">https://arxiv.org/abs/2303.03674</a></span> Character Expansion Methods for USp(2N), SO(n), and O(n) using the Characters of the Symmetric Group **</p>
+<p class="p2"></p>
+<p class="p1">20230309</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.04158">https://arxiv.org/abs/2303.04158</a></span> Constrained motions and slow dynamics in one-dimensional bosons with double-well dispersion ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.04855">https://arxiv.org/abs/2303.04855</a></span> Electrical control of magnetism in spin-orbit coupled graphene multilayers *** (Michael P. Zaletel, Shubhayu Chatterjee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.04459">https://arxiv.org/abs/2303.04459</a></span> SUBFACTORS AND MATHEMATICAL PHYSICS</p>
+<p class="p2"><br></p>
+<p class="p1">20230310</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.05230">https://arxiv.org/abs/2303.05230</a></span> Classifying the universal coarsening dynamics of a quenched ferromagnetic condensate *** (Jae-yoon Choi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.05232">https://arxiv.org/abs/2303.05232</a></span> Symmetry-resolved entanglement in critical non-Hermitian systems ***** (Pasquale Calabrese)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.14862">https://arxiv.org/abs/2302.14862</a></span> Categorical Symmetry of the Standard Model from Gravitational Anomaly (Juven Wang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.05444">https://arxiv.org/abs/2303.05444</a></span> Conformal Field Theory Ground States as Critical Points of an Entropy Function ***** (John McGreevy)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.04822">https://arxiv.org/abs/2303.04822</a></span> Extracting higher central charge from a single wave function *** (Shinsei Ryu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.04690">https://arxiv.org/abs/2303.04690</a></span> Quantum order by disorder in Frustrated Spin Nanotubes **** (Premala Chandra, Piers Coleman, S. L. Sondhi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.00926">https://arxiv.org/abs/2303.00926</a></span> Friedel oscillation in non-Fermi liquid: Lesson from exactly solvable Hatsugai-Kohmoto model *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.08499">https://arxiv.org/abs/2302.08499</a></span> Non-Fermi liquids from kinetic constraints in tilted optical lattices ***** (Ethan Lake, T. Senthil)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.06501">https://arxiv.org/abs/2302.06501</a></span> Continuous phase transitions between fractional quantum Hall states and symmetry-protected topological states **** (Meng Cheng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2005.10835">https://arxiv.org/abs/2005.10835</a></span> Non-equilibrium steady state phases of the interacting Aubry-Andre-Harper model **** (Junhyun Lee, Brian Swingle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.05366">https://arxiv.org/abs/2303.05366</a></span> Four Lectures on Poincar ́e Gauge Field Theory *****</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
