--- a/arxiv/2023_03_arxiv.html
+++ b/arxiv/2023_03_arxiv.html
@@ -151,6 +151,39 @@
 <p class="p1">20230317</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.08844">https://arxiv.org/abs/2303.08844</a></span> Operator Product Expansion Coefficients of the 3D Ising Criticality via Quantum Fuzzy Sphere (Yin-Chen He)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.09288">https://arxiv.org/abs/2303.09288</a></span> Fractionalized Excitations Probed by Ultrasound ** (Natalia B. Perkins)</p>
+<br>
+<p class="p1">20230320</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.09654">https://arxiv.org/abs/2303.09654</a></span> Four Lectures on the Random Field Ising Model, Parisi-Sourlas Supersymmetry, and Dimensional Reduction *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.10163">https://arxiv.org/abs/2303.10163</a></span> Anatomy of plasmons in generic Luttinger semimetals (Ipsita Mandal)<br>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.09573">https://arxiv.org/abs/2303.09573</a></span> Fracton superfluid hydrodynamics **** (Charles Stahl, Marvin Qi, Paolo Glorioso, Andrew Lucas, Rahul Nandkishore)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.10069">https://arxiv.org/abs/2303.10069</a></span> Rigorous Bounds on Eigenstate Thermalization (Masahito Ueda)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.10170">https://arxiv.org/abs/2303.10170</a></span> Generic axion Maxwell equations: path integral approach</p>
+<p class="p2"><br></p>
+<p class="p1">20230321</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.11259">https://arxiv.org/abs/2303.11259</a></span> Anomalous second-order skin modes in Floquet non-Hermitian systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.10468">https://arxiv.org/abs/2303.10468</a></span> Spin waves in a superconductor ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.10731">https://arxiv.org/abs/2303.10731</a></span> Anderson Impurities In Edge States with Nonlinear Dispersion ***</p>
+<p class="p2"><br></p>
+<p class="p1">20230322</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.11343">https://arxiv.org/abs/2303.11343</a></span> A cavity quantum electrodynamics implementation of the Sachdev–Ye–Kitaev model ***** (Philipp Hauke)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.11345">https://arxiv.org/abs/2303.11345</a></span> Superconductivity in Monolayer WTe2 from repulsive interactions **** (Yuxuan Wang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.11432">https://arxiv.org/abs/2303.11432</a></span> Charge Dynamics in large-q Complex Sachdev-Ye-Kitaev Chains ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.11729">https://arxiv.org/abs/2303.11729</a></span> Hybrid Topological Superconductivity and Hinge Majorana Flat Band in Type-II Dirac Semimetals</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.11534">https://arxiv.org/abs/2303.11534</a></span> A simple quantum system that describes a black hole *** (Juan Maldacena)</p>
+<p class="p2"><br></p>
+<p class="p1">20230323</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.12252">https://arxiv.org/abs/2303.12252</a></span> Geometric aspects of nonlinear and nonequilibrium phenomena (Naoto Nagaosa)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.12151">https://arxiv.org/abs/2303.12151</a></span> Universal chaotic dynamics from Krylov space *** (Shao-Kai Jian)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.10574">https://arxiv.org/abs/2209.10574</a></span> A Gauge Theory for Shallow Water (David Tong)</p>
+<p class="p2"><br></p>
+<p class="p1">20230324</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.13310">https://arxiv.org/abs/2201.13310</a></span> Real Hopf insulator (Bohm-Jung Yang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.12977">https://arxiv.org/abs/2303.12977</a></span> Anharmonic theory of superconductivity and its applications to emerging quantum materials</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.12833">https://arxiv.org/abs/2303.12833</a></span> Emergence of Chern Supermetal and Pair-Density Wave through Higher-Order Van Hove Singularities in the Haldane-Hubbard Model ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.02152">https://arxiv.org/abs/2303.02152</a></span> Theory of the low- and high-field superconducting phases of UTe2 **** (Yue Yu, Daniel F. Agterberg, S. Raghu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.01399">https://arxiv.org/abs/2210.01399</a></span> Quantum-geometry-induced anapole superconductivity (Youichi Yanase)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2110.08816">https://arxiv.org/abs/2110.08816</a></span> Semiclassical Boltzmann magnetotransport theory in anisotropic systems with a nonvanishing Berry curvature (Hongki Min)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.13310">https://arxiv.org/abs/2201.13310</a></span> Lectures on entanglement in quantum field theory *****</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
