--- a/arxiv/2023_03_arxiv.html
+++ b/arxiv/2023_03_arxiv.html
@@ -184,6 +184,46 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.01399">https://arxiv.org/abs/2210.01399</a></span> Quantum-geometry-induced anapole superconductivity (Youichi Yanase)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2110.08816">https://arxiv.org/abs/2110.08816</a></span> Semiclassical Boltzmann magnetotransport theory in anisotropic systems with a nonvanishing Berry curvature (Hongki Min)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2201.13310">https://arxiv.org/abs/2201.13310</a></span> Lectures on entanglement in quantum field theory *****</p>
+<br>
+<p class="p1">20230327</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.13602">https://arxiv.org/abs/2303.13602</a></span> Electron-phonon coupling and competing Kekul ́e orders in twisted bilayer graphene (Steven H. Simon, Erez Berg, S.A. Parameswaran)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.13721">https://arxiv.org/abs/2303.13721</a></span> Realization of Non-Hermitian Hopf Bundle Matter (Hee Chul Park, Kyungmin Lee, Bumki Min, Moon Jip Park)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.05927">https://arxiv.org/abs/2301.05927</a></span> Aspects of Supergroup Gauge Theory (Taro Kimura)</p>
+<p class="p2"><br></p>
+<p class="p1">20230328</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.14205">https://arxiv.org/abs/2303.14205</a></span> Hydrodynamic electronic transport **** (L. Fritz, T. Scaffidi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.14741">https://arxiv.org/abs/2303.14741</a></span> Gauge Invariance and Anomalies in Condensed Matter Physics ***** (Jürg Fröhlich)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.14627">https://arxiv.org/abs/2303.14627</a></span> Symmetry analysis of light-induced magnetic interactions via Floquet engineering ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.14326">https://arxiv.org/abs/2303.14326</a></span> Computing entanglement entropy of interacting fermions with quantum Monte Carlo: Why we failed and how to get it right (Yang Qi, Zi Yang Meng)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.15355">https://arxiv.org/abs/2303.15355</a></span> Mechanisms for Long-Lived, Photo-Induced Superconductivity (Eugene A. Demler)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.14549">https://arxiv.org/abs/2303.14549</a></span> Seeing Topological Charges by Naked Eyes</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.08162">https://arxiv.org/abs/2303.08162</a></span> Artificial intelligence for artificial materials: moir ́e atom **** (Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2207.10475">https://arxiv.org/abs/2207.10475</a></span> Emergent space-time meets emergent quantum phenomena: observing a quantum phase transition in a moving sample (Jinwu Ye)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.09654">https://arxiv.org/abs/2303.09654</a></span> Four Lectures on the Random Field Ising Model, Parisi-Sourlas Supersymmetry, and Dimensional Reduction ****</p>
+<p class="p2"><br></p>
+<p class="p1">20230329</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.15820">https://arxiv.org/abs/2303.15820</a></span> Flat-band ferromagnetism in the SU(N) Hubbard and Kondo lattice models ***** (Hosho Katsura)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.15504">https://arxiv.org/abs/2303.15504</a></span> Towards a Ginzburg-Landau theory of the quantum geometric effect in superconductors ***</p>
+<p class="p3"><a href="https://arxiv.org/abs/2303.15590">https://arxiv.org/abs/2303.15590</a><span class="s2"> Spacetime Subsystem Symmetries</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.15551">https://arxiv.org/abs/2303.15551</a></span> Electron-K-Phonon Interaction In Twisted Bilayer Graphene (B. Andrei Bernevig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.04328">https://arxiv.org/abs/2208.04328</a></span> Loop current fluctuations and quantum critical transport **** (Dominic V. Else, Hart Goldman, T. Senthil)</p>
+<p class="p2"><br></p>
+<p class="p1">20230330</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.16258">https://arxiv.org/abs/2303.16258</a></span> Optimisation via encodings: a renormalisation group perspective</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.16405">https://arxiv.org/abs/2303.16405</a></span> Topological error correcting processes from fixed-point path integrals</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.16888">https://arxiv.org/abs/2303.16888</a></span> Maximum entropy analytic continuation of anomalous self-energies ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.16222">https://arxiv.org/abs/2303.16222</a></span> Topological phase diagrams of in-plane field polarized Kitaev magnets *** (Li Ern Chern, Claudio Castelnovo)<br>
+<a href="https://arxiv.org/abs/2302.03703"><span class="s1">https://arxiv.org/abs/2302.03703</span></a> XY* transition and extraordinary boundary criticality from fractional exciton condensation in quantum Hall bilayer (Ya-Hui Zhang, Zheng Zhu, Ashvin Vishwanath)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.13234">https://arxiv.org/abs/2301.13234</a></span> Field Theoretic Aspects of Condensed Matter Physics: An Overview ***** (Eduardo Fradkin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2205.02784">https://arxiv.org/abs/2205.02784</a></span> Symmetries as the guiding principle for flattening bands of Dirac fermions (Ady Stern)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.15791">https://arxiv.org/abs/2203.15791</a></span> Duality, Criticality, Anomaly, and Topology in Quantum Spin-1 Chains (Hosho Katsura)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.16380">https://arxiv.org/abs/2303.16380</a></span> The Timelike Tube Theorem in Curved Spacetime (Edward Witten)</p>
+<p class="p2"><br></p>
+<p class="p1">20230331</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.16919">https://arxiv.org/abs/2303.16919</a></span> Complete crystalline topological invariants from partial rotations in (2+1)D invertible fermionic states and Hofstadter’s butterfly (Maissam Barkeshli)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.17553">https://arxiv.org/abs/2303.17553</a></span> Topological Circular Dichroism in Chiral Multifold Semimetals ***** (Junyeong Ahn)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.16946">https://arxiv.org/abs/2303.16946</a></span> NoRA: A Tensor Network Ansatz for Volume-Law Entangled Equilibrium States of Highly Connected Hamiltonians (Brian Swingle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.17529">https://arxiv.org/abs/2303.17529</a></span> Nodal band-off-diagonal superconductivity in twisted graphene superlattices ***** (Maine Christos, Subir Sachdev, Mathias S. Scheurer)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
