--- a/arxiv/2023_03_arxiv.html
+++ b/arxiv/2023_03_arxiv.html
@@ -204,7 +204,7 @@
 <p class="p1">20230329</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.15820">https://arxiv.org/abs/2303.15820</a></span> Flat-band ferromagnetism in the SU(N) Hubbard and Kondo lattice models ***** (Hosho Katsura)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.15504">https://arxiv.org/abs/2303.15504</a></span> Towards a Ginzburg-Landau theory of the quantum geometric effect in superconductors ***</p>
-<p class="p3"><a href="https://arxiv.org/abs/2303.15590">https://arxiv.org/abs/2303.15590</a><span class="s2"> Spacetime Subsystem Symmetries</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.15590">https://arxiv.org/abs/2303.15590</a></span> Spacetime Subsystem Symmetries</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.15551">https://arxiv.org/abs/2303.15551</a></span> Electron-K-Phonon Interaction In Twisted Bilayer Graphene (B. Andrei Bernevig)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2208.04328">https://arxiv.org/abs/2208.04328</a></span> Loop current fluctuations and quantum critical transport **** (Dominic V. Else, Hart Goldman, T. Senthil)</p>
 <p class="p2"><br></p>
@@ -213,7 +213,7 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.16405">https://arxiv.org/abs/2303.16405</a></span> Topological error correcting processes from fixed-point path integrals</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.16888">https://arxiv.org/abs/2303.16888</a></span> Maximum entropy analytic continuation of anomalous self-energies ***</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.16222">https://arxiv.org/abs/2303.16222</a></span> Topological phase diagrams of in-plane field polarized Kitaev magnets *** (Li Ern Chern, Claudio Castelnovo)<br>
-<a href="https://arxiv.org/abs/2302.03703"><span class="s1">https://arxiv.org/abs/2302.03703</span></a> XY* transition and extraordinary boundary criticality from fractional exciton condensation in quantum Hall bilayer (Ya-Hui Zhang, Zheng Zhu, Ashvin Vishwanath)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.03703">https://arxiv.org/abs/2302.03703</a></span> XY* transition and extraordinary boundary criticality from fractional exciton condensation in quantum Hall bilayer (Ya-Hui Zhang, Zheng Zhu, Ashvin Vishwanath)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2301.13234">https://arxiv.org/abs/2301.13234</a></span> Field Theoretic Aspects of Condensed Matter Physics: An Overview ***** (Eduardo Fradkin)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2205.02784">https://arxiv.org/abs/2205.02784</a></span> Symmetries as the guiding principle for flattening bands of Dirac fermions (Ady Stern)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2203.15791">https://arxiv.org/abs/2203.15791</a></span> Duality, Criticality, Anomaly, and Topology in Quantum Spin-1 Chains (Hosho Katsura)</p>
