--- a/arxiv/2023_04_arxiv.html
+++ b/arxiv/2023_04_arxiv.html
@@ -73,6 +73,38 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.03276">https://arxiv.org/abs/2304.03276</a></span> Scaling and localization in kinetically constrained diffusion ***** (Jung Hoon Han, Ethan Lake, Sunghan Ro)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2211.12543">https://arxiv.org/abs/2211.12543</a></span> Lieb-Schultz-Mattis, Luttinger, and ’t Hooft – anomaly matching in lattice systems ***** (Meng Cheng, Nathan Seiberg)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2111.07335">https://arxiv.org/abs/2111.07335</a></span> Rigorous Index Theory for One-Dimensional Interacting Topological Insulators (Hal Tasaki)</p>
+<br>
+<p class="p1">20230410</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.03413">https://arxiv.org/abs/2304.03413</a></span> Mobile Kink Solitons in a Van der Waals Charge-Density-Wave Layer *** (Jinwon Lee, Gil-Young Cho, Han Woong Yeom)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.03301">https://arxiv.org/abs/2304.03301</a></span> Spin-momentum Locking and Topological Vector Charge Response with Conserved Spin **** (Yoonseok Hwang, Taylor L. Hughes)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.03613">https://arxiv.org/abs/2304.03613</a></span> Extracting quantum-geometric effects from Ginzburg-Landau theory in a multiband Hubbard model</p>
+<p class="p2"><br></p>
+<p class="p1">20230411</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.04720">https://arxiv.org/abs/2304.04720</a></span> Generic deformation channels for critical Fermi surfaces in the collisionless regime (Ipsita Mandal)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.04471">https://arxiv.org/abs/2304.04471</a></span> Identifying dissipative phase transitions from entropy and conductance *** (Cheolhee Han)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.04247">https://arxiv.org/abs/2304.04247</a></span> Quantum Mechanics Lecture Notes. Selected Chapters ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.04533">https://arxiv.org/abs/2304.04533</a></span> Impurity effect on Bogoliubov Fermi surfaces: Analysis based on iron-based superconductors ****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.12731">https://arxiv.org/abs/2302.12731</a></span> Definition and Classification of Fermi Surface Anomalies ***** (Da-Chuan Lu, Juven Wang, Yi-Zhuang You)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2108.09480">https://arxiv.org/abs/2108.09480</a></span> Zero sound and plasmon modes for non-Fermi liquids **** (Ipsita Mandal)</p>
+<p class="p2"><br></p>
+<p class="p1">20230412</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.04792">https://arxiv.org/abs/2304.04792</a></span> Topologically stable ergodicity breaking from emergent higher-form symmetries in generalized quantum loop models **** (Charles Stahl, Rahul Nandkishore, Oliver Hart)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.05356">https://arxiv.org/abs/2304.05356</a></span> Higher structures in matrix product states **** (Shinsei Ryu)</p>
+<p class="p2"><br></p>
+<p class="p1">20230413</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.05748">https://arxiv.org/abs/2304.05748</a></span> Topological Monomodes in non-Hermitian Systems</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.05394">https://arxiv.org/abs/2304.05394</a></span> Lattices: From Roots to String Compactifications</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.05718">https://arxiv.org/abs/2304.05718</a></span> Interplay between lattice gauge theory and subsystem codes ***</p>
+<p class="p2"><br></p>
+<p class="p1">20230414</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.06689">https://arxiv.org/abs/2304.06689</a></span> Topological enhancement of non-normality in non-Hermitian skin effects (Masatoshi Sato)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.06260">https://arxiv.org/abs/2304.06260</a></span> Topological quantum gates and topological entangled states by braiding Majorana fermions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.13905">https://arxiv.org/abs/2303.13905</a></span> A NOTE ON THE RENORMALIZATION GROUP APPROACH TO THE CENTRAL LIMIT THEOREM</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.07885">https://arxiv.org/abs/2302.07885</a></span> A model of d-wave superconductivity, antiferromagnetism, and charge order on the square lattice ***** (Maine Christos, Zhu-Xi Luo, Henry Shackleton, Mathias S. Scheurer, Subir Sachdev)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2302.12793">https://arxiv.org/abs/2302.12793</a></span> Tangent fermions: Dirac or Majorana fermions on a lattice without fermion doubling</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2210.08025">https://arxiv.org/abs/2210.08025</a></span> Strong correlations in ABC-stacked trilayer graphene: Moir ́e is important ***** (Adarsh S. Patri and T. Senthil)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2304.06507">https://arxiv.org/abs/2304.06507</a></span> The trace anomaly for a chiral fermion ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2303.13144">https://arxiv.org/abs/2303.13144</a></span> Topological classification of non-Hermitian Hamiltonians with frequency dependence ****</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 
